Shoring up packaging for release

--- a/DocGpt.CodeFixes/AnalyzerResources.resx
+++ b/DocGpt.CodeFixes/AnalyzerResources.resx
@@ -122,7 +122,7 @@
     <comment>An optional longer localizable description of the diagnostic.</comment>
   </data>
   <data name="AnalyzerMessageFormat" xml:space="preserve">
-    <value>Member or type '{0}' needs XML documentation</value>
+    <value>{0} '{1}' needs XML documentation</value>
     <comment>The format-able message the diagnostic displays.</comment>
   </data>
   <data name="AnalyzerTitle" xml:space="preserve">
